@@ -1,13 +1,13 @@
 /**
  * *****************************************************************************
  * Copyright 2011 See AUTHORS file.
- * <p>
+ *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
  * the License at
- * <p>
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
@@ -34,9 +34,15 @@ import com.badlogic.gdx.maps.tiled.TiledMap;
 import com.badlogic.gdx.maps.tiled.TmxMapLoader;
 import com.badlogic.gdx.maps.tiled.objects.TiledMapTileMapObject;
 import com.badlogic.gdx.maps.tiled.tiles.AnimatedTiledMapTile;
-import com.badlogic.gdx.math.*;
+import com.badlogic.gdx.math.Circle;
+import com.badlogic.gdx.math.Ellipse;
+import com.badlogic.gdx.math.Polygon;
+import com.badlogic.gdx.math.Polyline;
+import com.badlogic.gdx.math.Rectangle;
+import com.badlogic.gdx.math.Vector2;
 import com.badlogic.gdx.tests.utils.GdxTest;
 import com.badlogic.gdx.tests.utils.OrthoCamController;
+import com.badlogic.gdx.utils.Align;
 import com.badlogic.gdx.utils.ScreenUtils;
 
 public class TiledMapObjectLoadingTest extends GdxTest {
@@ -46,6 +52,7 @@ public class TiledMapObjectLoadingTest extends GdxTest {
 	private OrthographicCamera camera;
 	private OrthoCamController cameraController;
 	private BitmapFont font;
+	private BitmapFont textMapObjectFont;
 	private SpriteBatch batch;
 	private String loadingStatus;
 
@@ -63,6 +70,7 @@ public class TiledMapObjectLoadingTest extends GdxTest {
 		Gdx.input.setInputProcessor(cameraController);
 
 		font = new BitmapFont();
+		textMapObjectFont = new BitmapFont();
 		batch = new SpriteBatch();
 		map = new TmxMapLoader().load("data/maps/tiled-objects/test-load-mapobjects.tmx");
 		MapProperties properties = map.getProperties();
@@ -85,6 +93,7 @@ public class TiledMapObjectLoadingTest extends GdxTest {
 		loadingStatus += "- TextureMapObject : " + mapObjects.getByType(TextureMapObject.class).size + "\n";
 		loadingStatus += "- PointMapObject : " + mapObjects.getByType(PointMapObject.class).size + "\n";
 		loadingStatus += "- TiledMapTileMapObject : " + mapObjects.getByType(TiledMapTileMapObject.class).size + "\n";
+		loadingStatus += "- TextMapObject : " + mapObjects.getByType(TextMapObject.class).size + "\n";
 	}
 
 	@Override
@@ -103,7 +112,7 @@ public class TiledMapObjectLoadingTest extends GdxTest {
 				batch.begin();
 				TiledMapTileMapObject tmtObject = (TiledMapTileMapObject)mapObject;
 				TextureRegion textureRegion = tmtObject.getTile().getTextureRegion();
-				// TilEd rotation is clockwise, we need counter-clockwise.
+				// Tiled rotation is clockwise, we need counter-clockwise.
 				float rotation = -tmtObject.getRotation();
 				float scaleX = tmtObject.getScaleX();
 				float scaleY = tmtObject.getScaleY();
@@ -146,8 +155,46 @@ public class TiledMapObjectLoadingTest extends GdxTest {
 				// drawing circle, because shapeRenderer.point is barely visible, if visible at all
 				shapeRenderer.circle(point.x, point.y, 1f);
 				shapeRenderer.end();
+			} else if (mapObject instanceof TextMapObject) {
+				batch.begin();
+				TextMapObject textMapObject = (TextMapObject)mapObject;
+
+				int alignment;
+				String hAlign = textMapObject.getHorizontalAlign();
+
+				switch (hAlign.toLowerCase()) {
+				case "center":
+					alignment = Align.center;
+					break;
+				case "right":
+					alignment = Align.right;
+					break;
+				case "left":
+				default:
+					// Default is 'left alignment, also there is no Align 'justify' like equivalent
+					alignment = Align.left;
+					break;
+				}
+
+				textMapObjectFont.setColor(textMapObject.getColor());
+				// The text rendering starts from the baseline, causing the text to appear below the specified Y-coordinate.
+				// To align the text with the top of the bounding box (as it appears in Tiled), we add textMapObject.getHeight() to
+				// the Y position.
+				textMapObjectFont.draw(batch, textMapObject.getText(), textMapObject.getX(),
+					textMapObject.getY() + textMapObject.getHeight(), textMapObject.getWidth(), alignment, textMapObject.isWrap());
+				batch.end();
+
+				shapeRenderer.setColor(Color.DARK_GRAY);
+				// Draw display bounding box of TextMapObject
+				shapeRenderer.begin(ShapeRenderer.ShapeType.Line);
+				shapeRenderer.rect(textMapObject.getX(), textMapObject.getY(), textMapObject.getWidth(), textMapObject.getHeight());
+				shapeRenderer.end();
+
+				// reset back to blue
+				shapeRenderer.setColor(Color.BLUE);
 			}
 		}
+
 		batch.begin();
 		font.draw(batch, "FPS: " + Gdx.graphics.getFramesPerSecond() + "\n" + loadingStatus, 20, 500);
 		batch.end();
@@ -157,5 +204,7 @@ public class TiledMapObjectLoadingTest extends GdxTest {
 	public void dispose () {
 		map.dispose();
 		shapeRenderer.dispose();
+		font.dispose();
+		textMapObjectFont.dispose();
 	}
 }
